# braird-core

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GATING.md  README.md
.github/workflows/: android-artifacts.yml  canon-drift.yml  changelog-check.yml  native-parity-drift.yml  nightly-macos.yml  parity.yml  release.yml  schema-drift.yml  sync-integration.yml  vendored-drift.yml
bindings/android/: .gitignore  build.gradle.kts  settings.gradle.kts
bindings/android/gradle/wrapper/: gradle-wrapper.properties
bindings/android/src/main/: AndroidManifest.xml
bindings/consumer-smoke/: build.gradle.kts  settings.gradle.kts
bindings/consumer-smoke/src/test/kotlin/: SelfContainedRoundTripTest.kt
bindings/kotlin/: build.gradle.kts
bindings/kotlin/src/main/kotlin/uniffi/braird_core/: braird_core.kt
bindings/kotlin/src/test/kotlin/: RoundTripTest.kt
bindings/swift/Sources/BrairdCore/: BrairdCore.swift
bindings/swift/Tests/BrairdCoreTests/: RoundTripTests.swift
braird-core/: CHANGELOG.md
braird-core/docs/architecture/: 0001-async-http-client.md
docs/: pinning.md  snapshots.md
docs/adr/: 0001-async-http-client.md  0002-crypto-backend-rustcrypto.md  0003-sync-engine-seal-at-write-flush.md  0004-async-http-client.md  0005-read-query-api-and-in-memory-lexical-search.md  0006-sealed-vector-store-and-host-embedder-contract.md
docs/learnings/: 2026-07-02-sur742-uniffi-docstring-checksums.md  2026-07-02-sur743-sequence-is-not-a-commit-ordered-watermark.md  2026-07-04-sur745-ios-wrapper-atomicity.md  _template.md
docs/plans/: 2026-07-09-sur660-sur661-decomposition-amendments.md  sur-661-pressure-test-and-feel-breezy-spindle.md  sur-736-740-sync-convergence-plan.md  sur-741-743-sur659-closeout-plan.md
docs/superpowers/plans/: 2026-07-16-sur-921-tags-only-note-patch.md
docs/superpowers/specs/: 2026-07-16-sur-921-tags-only-note-patch-design.md
scripts/: build-aar.sh  build-xcframework.sh  check-ffi-arg-slots.mjs  check-native-parity.mjs  check-snapshot-parity.mjs  extract-great-ideas.mjs  extract-sync-schema.mjs
src/: byte_encryption.rs  content_tag.rs  embeddings.rs  key_manager.rs  lib.rs  normalize.rs  note_encryption.rs  primitives.rs  search.rs  store.rs  vault.rs
src/sync/: export_import.rs  http.rs  mod.rs  outbox.rs  pull.rs  push.rs  read.rs  reconcile.rs
src/sync/export_import/: export.rs  import.rs  merge.rs
test-support/: Cargo.toml
test-support/src/: lib.rs
tests/: parity.rs  schema_parity.rs  sync_659b_integration.rs  sync_725_integration.rs  sync_726_integration.rs  sync_736_integration.rs  sync_976_integration.rs
tests/common/: mod.rs
